@@ -1,3 +1,5 @@
+DIST psi-birthdayreminder-0.2.6_pre.tar.xz 10072 RMD160 5904c2189d6561871f39e541e76b70eb1a1d68e1 SHA1 0ecae5c196eed65ec3de79d0c6f6933533883c42 SHA256 95ad051e0956da597b851577c7bb572c91faaee97ce96c0134af5f19544471b3
+EBUILD psi-birthdayreminder-0.2.6_pre.ebuild 240 RMD160 6df5ce871966ab64c74e68a4f8032e0859bf1dfa SHA1 758e16a282e55f2944fa7b887f9c533eb66a3e08 SHA256 9ab79efaa711d37eedca2dd7838b0e6a9852bc9cd0a08890c32b6ac7efb7ba42
 EBUILD psi-birthdayreminder-9999.ebuild 231 RMD160 b14446ac969877e42c02ab111fd2ea8b55c8e458 SHA1 75b13ac28dc4d026384b8074f1a95dcb271112fc SHA256 25fab667c061ee5efb0ff368ae7487f6150e4d544d3c89a7da9aaec4c93d73ac
-MISC ChangeLog 297 RMD160 f13eccce87bfe13931ed8d61e6e7aacafecb9c79 SHA1 2dc9cd4de8d710c98aaca7c3232166ff97f9804f SHA256 4e094f8a85763912e25f3cf375f66ce22cb130b64dd7d3f8e26329a094cc4684
+MISC ChangeLog 398 RMD160 4d0c53925096ba3a10d9cb2a5d8b6826dad19bc5 SHA1 fa4b4a18f326f13cae777604e32dbf43bd300dd4 SHA256 f3c36c13457a65d906c0b4ca6672b7f89e34552f0207647c47a0924d82a98e8c
 MISC metadata.xml 451 RMD160 622920ffa2cdd86da264e3111a271915c515716c SHA1 51ed17dd366f25f4beff55912e2beed44e1d15c6 SHA256 ec2d1059445df2f1ad1b3e925bba942af207d2ac8ffc1baafb38e8cb165a5a7c
